--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -51,7 +51,7 @@ spec:
       serviceAccountName: keptn-dynatrace-sli-service
       containers:
         - name: dynatrace-sli-service
-          image: keptncontrib/dynatrace-sli-service:0.5.0
+          image: keptncontrib/dynatrace-sli-service:7c464d2
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
