--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -88,7 +88,7 @@ spec:
             - name: PUBSUB_TOPIC
               value: 'sh.keptn.internal.event.get-sli'
             - name: PUBSUB_RECIPIENT
-              value: 'dynatrace-sli-service'
+              value: '127.0.0.1'
 ---
 apiVersion: v1
 kind: Service
