--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -71,6 +71,8 @@ spec:
               valueFrom:	
                 fieldRef:	
                   fieldPath: metadata.namespace
+            - name: HTTP_SSL_VERIFY
+              value: 'true'
         - name: distributor
           image: keptn/distributor:0.7.1
           ports:
