--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -51,7 +51,7 @@ spec:
       serviceAccountName: keptn-dynatrace-sli-service
       containers:
         - name: dynatrace-sli-service
-          image: keptncontrib/dynatrace-sli-service:0.7.0
+          image: keptncontrib/dynatrace-sli-service:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -67,14 +67,14 @@ spec:
               value: 'http://configuration-service:8080'
             - name: EVENTBROKER
               value: 'http://event-broker/keptn'
-            - name: POD_NAMESPACE	
-              valueFrom:	
-                fieldRef:	
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
                   fieldPath: metadata.namespace
             - name: HTTP_SSL_VERIFY
               value: 'true'
         - name: distributor
-          image: keptn/distributor:0.7.2
+          image: keptn/distributor:latest
           ports:
             - containerPort: 8080
           resources:
