--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -88,7 +88,7 @@ spec:
             - name: PUBSUB_URL
               value: 'nats://keptn-nats-cluster'
             - name: PUBSUB_TOPIC
-              value: 'sh.keptn.internal.event.get-sli'
+              value: 'sh.keptn.event.get-sli.triggered'
             - name: PUBSUB_RECIPIENT
               value: '127.0.0.1'
 ---
