--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -137,7 +137,7 @@ jobs:
           env-file: .ci_env
 
       - name: Test
-        run: go test -coverprofile=coverage.txt -covermode=atomic -v
+        run: go test -coverprofile=coverage.txt -covermode=atomic -v ./...
         working-directory: .
 
 
