--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -51,7 +51,7 @@ spec:
       serviceAccountName: keptn-dynatrace-sli-service
       containers:
         - name: dynatrace-sli-service
-          image: keptncontrib/dynatrace-sli-service:latest
+          image: keptncontrib/dynatrace-sli-service:0.7.3-dev
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -74,16 +74,16 @@ spec:
             - name: HTTP_SSL_VERIFY
               value: 'true'
         - name: distributor
-          image: keptn/distributor:latest
+          image: keptn/distributor:0.8.0-alpha # ToDo: change to 0.8.0 once final
           ports:
             - containerPort: 8080
           resources:
             requests:
-              memory: "32Mi"
-              cpu: "50m"
+              memory: "16Mi"
+              cpu: "25m"
             limits:
               memory: "128Mi"
-              cpu: "500m"
+              cpu: "250m"
           env:
             - name: PUBSUB_URL
               value: 'nats://keptn-nats-cluster'
