--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -51,7 +51,7 @@ spec:
       serviceAccountName: keptn-dynatrace-sli-service
       containers:
         - name: dynatrace-sli-service
-          image: keptncontrib/dynatrace-sli-service:0.7.3-dev
+          image: keptncontrib/dynatrace-sli-service:0.8.0
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -74,7 +74,7 @@ spec:
             - name: HTTP_SSL_VERIFY
               value: 'true'
         - name: distributor
-          image: keptn/distributor:0.8.0-alpha # ToDo: change to 0.8.0 once final
+          image: keptn/distributor:0.8.0
           ports:
             - containerPort: 8080
           resources:
