#163 changed name of uploaded artifact
Signed-off-by: Florian Bacher <florian.bacher@dynatrace.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -152,7 +152,7 @@ jobs:
         id: upload_helm_chart
         uses: actions/upload-artifact@v2
         with:
-          name: ${env.IMAGE}-installer
+          name: installer
           path: installer/*.tgz
 
 
