--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,6 +8,18 @@ build:
         buildArgs:
           debugBuild: true
 deploy:
-  kubectl:
-    manifests:
-      - deploy/service.yaml
+  helm:
+    flags:
+      upgrade: ["--reuse-values"]
+    releases:
+      - name: dynatrace-sli-service # needs to be the same name as currently used (check via helm ls -n keptn)
+        namespace: keptn # needs to be the same namespace as where the helm-chart is currently deployed
+        # upgradeOnChange: true
+        # recreatePods: false # don't recreate all pods
+        artifactOverrides:
+          image: keptncontrib/dynatrace-sli-service
+        overrides:
+          distributor:
+            image:
+              tag: 0.8.0
+        chartPath: chart
