--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -13,7 +13,7 @@ distributor:
   image:
     repository: docker.io/keptn/distributor  # Container Image Name
     pullPolicy: IfNotPresent                 # Kubernetes Image Pull Policy
-    tag: ""                                  # Container Tag
+    tag: "0.8.1"                                  # Container Tag
 
 remoteControlPlane:
   enabled: false                              # Enables remote execution plane mode
