#163 updated readme Signed-off-by: Florian Bacher <florian.bacher@dynatrace.com>
Signed-off-by: Florian Bacher <florian.bacher@dynatrace.com>

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
             - name: HTTP_SSL_VERIFY
-              value: 'true'
+              value: "{{ .Values.dynatraceSliService.config.httpSSLVerify }}"
           livenessProbe:
             httpGet:
               path: /health
