--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,6 +7,7 @@ build:
         dockerfile: Dockerfile
         buildArgs:
           debugBuild: true
+          version: develop
 deploy:
   helm:
     flags:
@@ -21,5 +22,9 @@ deploy:
         overrides:
           distributor:
             image:
-              tag: 0.8.0
+              tag: 0.8.1
+          resources:
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
         chartPath: chart
