--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -48,6 +48,8 @@ spec:
       labels:
         run: dynatrace-sli-service
     spec:
+      securityContext:
+        fsGroup: 65532
       serviceAccountName: keptn-dynatrace-sli-service
       containers:
         - name: dynatrace-sli-service
@@ -69,6 +71,11 @@ spec:
                   fieldPath: metadata.namespace
             - name: HTTP_SSL_VERIFY
               value: 'true'
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 65532
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
         - name: distributor
           image: keptn/distributor:0.8.0
           ports:
@@ -87,6 +94,11 @@ spec:
               value: 'sh.keptn.event.get-sli.triggered'
             - name: PUBSUB_RECIPIENT
               value: '127.0.0.1'
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 65532
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
 ---
 apiVersion: v1
 kind: Service
