--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -53,7 +53,7 @@ spec:
       serviceAccountName: keptn-dynatrace-sli-service
       containers:
         - name: dynatrace-sli-service
-          image: keptncontrib/dynatrace-sli-service:latest
+          image: keptncontrib/dynatrace-sli-service:0.10.3
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -77,7 +77,7 @@ spec:
             readOnlyRootFilesystem: true
             allowPrivilegeEscalation: false
         - name: distributor
-          image: keptn/distributor:0.8.2
+          image: keptn/distributor:0.8.3
           ports:
             - containerPort: 8080
           resources:
