--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -89,6 +89,12 @@ spec:
               value: "{{ .Values.remoteControlPlane.api.token }}"
             - name: HTTP_SSL_VERIFY
               value: "{{ .Values.remoteControlPlane.api.apiValidateTls | default "true" }}"
+            - name: HTTP_PROXY
+              value: '{{ .Values.dynatraceSliService.config.httpProxy }}'
+            - name: HTTPS_PROXY
+              value: '{{ .Values.dynatraceSliService.config.httpsProxy }}'
+            - name: NO_PROXY
+              value: '127.0.0.1'
             {{- end }}
 
       {{- with .Values.nodeSelector }}
