--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -7,6 +7,8 @@ dynatraceSliService:
     enabled: true                            # Creates a Kubernetes Service for the dynatrace-sli-service
   config:
     httpSSLVerify: true
+    httpProxy: ""
+    httpsProxy: ""
 
 distributor:
   stageFilter: ""                            # Sets the stage this dynatrace-sli-service belongs to
