#74 Add proxy environment variable support (#216)
* #74 Add proxy environment variable support

Signed-off-by: Arthur Pitman <arthur.pitman@dynatrace.com>

* #74 Added test for proxy environment variables

Signed-off-by: Arthur Pitman <arthur.pitman@dynatrace.com>

* #74 Updated helm chart and documentation

Signed-off-by: Arthur Pitman <arthur.pitman@dynatrace.com>

* #74 Fixed variable name

Signed-off-by: Arthur Pitman <arthur.pitman@dynatrace.com>

* #74 Fixed chart deployment.yaml

Signed-off-by: Arthur Pitman <arthur.pitman@dynatrace.com>

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -45,6 +45,12 @@ spec:
                   fieldPath: metadata.namespace
             - name: HTTP_SSL_VERIFY
               value: "{{ .Values.dynatraceSliService.config.httpSSLVerify }}"
+            - name: HTTP_PROXY
+              value: '{{ .Values.dynatraceSliService.config.httpProxy }}'
+            - name: HTTPS_PROXY
+              value: '{{ .Values.dynatraceSliService.config.httpsProxy }}'
+            - name: NO_PROXY
+              value: '127.0.0.1'
           livenessProbe:
             httpGet:
               path: /health
