--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,4 +2,4 @@
 # Each line is a file pattern followed by one or more owners.
 
 # These owners will be the default owners for everything in the repo.
-* @christian-kreuzberger-dtx
+* @christian-kreuzberger-dtx @Kavindu-Dodan @agrimmer @arthurpitman
