--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -47,6 +47,8 @@ spec:
     metadata:
       labels:
         run: dynatrace-sli-service
+        app.kubernetes.io/name: dynatrace-sli-service
+        app.kubernetes.io/version: latest
     spec:
       securityContext:
         fsGroup: 65532
@@ -77,7 +79,7 @@ spec:
             readOnlyRootFilesystem: true
             allowPrivilegeEscalation: false
         - name: distributor
-          image: keptn/distributor:0.8.3
+          image: keptn/distributor:0.8.4
           ports:
             - containerPort: 8080
           resources:
@@ -94,6 +96,31 @@ spec:
               value: 'sh.keptn.event.get-sli.triggered'
             - name: PUBSUB_RECIPIENT
               value: '127.0.0.1'
+            - name: VERSION
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: 'metadata.labels[''app.kubernetes.io/version'']'
+            - name: K8S_DEPLOYMENT_NAME
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: 'metadata.labels[''app.kubernetes.io/name'']'
+            - name: K8S_POD_NAME
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: metadata.name
+            - name: K8S_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: metadata.namespace
+            - name: K8S_NODE_NAME
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: spec.nodeName
           securityContext:
             runAsNonRoot: true
             runAsUser: 65532
