--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:        
-        {{- include "dynatrace-service.labels" . | nindent 8 }}
+        {{- include "dynatrace-sli-service.labels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
