--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -48,7 +48,7 @@ spec:
       labels:
         run: dynatrace-sli-service
         app.kubernetes.io/name: dynatrace-sli-service
-        app.kubernetes.io/version: latest
+        app.kubernetes.io/version: 0.12.0
     spec:
       securityContext:
         fsGroup: 65532
